# thesiscode

./: .gitignore  CMakeLists.txt  README.md  test_joinsplit.cpp
abe/: CMakeLists.txt
model/: AuditContent.cpp  AuditContent.h  AuditHandler.cpp  AuditHandler.h  BaseHandler.cpp  BaseHandler.h  CMakeLists.txt  MyBlock.cpp  MyBlock.h  MyBlockChain.cpp  MyBlockChain.h  MyTransaction.cpp  MyTransaction.h  MyTransactionPool.cpp  MyTransactionPool.h  PrintHandler.cpp  PrintHandler.h  QueryHandler.cpp  QueryHandler.h  Readme.md  RegisterHandler.cpp  RegisterHandler.h  Storage.cpp  Storage.h  TestHandler.cpp  TestHandler.h  TransactionHandler.cpp  TransactionHandler.h  UserModel.cpp  UserModel.h  Utils.cpp  Utils.h  main.cpp  myBlock.cpp  myBlock.h  myBlockChain.cpp  myBlockChain.h  myTransaction.cpp  myTransaction.h  test_model.cpp
server/: CMakeLists.txt  ServerStorage.cpp  ServerStorage.h  TransactionHandler.cpp  TransactionHandler.h  server.cpp  server.h
src/: CMakeLists.txt  addressindex.h  amount.cpp  amount.h  asyncrpcoperation.cpp  asyncrpcoperation.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparamsseeds.h.gch  coins.cpp  coins.h  compat.h  compat.h.gch  compressor.cpp  compressor.h  core_memusage.h  dbwrapper.cpp  dbwrapper.h  key_constants.h.gch  limitedmap.h  main.cpp  main.h  mempool_limit.cpp  mempool_limit.h  memusage.h.gch  miner.cpp  miner.h  mruset.h  net.cpp  net.h  pow.cpp  pow.h  spentindex.h  streams.h  timestampindex.h  transaction_builder.cpp  transaction_builder.h  (+13 more)
src/3rd/include/: db.h
src/3rd/include/event2/: bufferevent.h  dns.h  event-config.h  event.h
src/3rd/lib/: libevent.la  libevent_core.la  libevent_extra.la  libevent_pthreads.la  libsodium.la  libzmq.la
src/3rd/lib/cmake/boost_unit_test_framework-1.70.0/: boost_unit_test_framework-config.cmake
src/compat/: endian.h
src/consensus/: consensus.h  funding.cpp  funding.h  params.cpp  params.h  upgrades.cpp  upgrades.h  validation.h
src/crypto/: common.h  equihash.cpp  equihash.h  equihash.tcc  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/leveldb/port/: port_win.h
src/policy/.deps/: libbitcoin_server_a-fees.Po  libbitcoin_server_a-policy.Po
src/primitives/: transaction.h
src/primitives/.deps/: libbitcoin_common_a-block.Po  libbitcoin_common_a-transaction.Po
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/rust/: README.md
src/rust/include/: librustzcash.h  tracing.h
src/rust/include/rust/: blake2b.h  ed25519.h  types.h
src/rust/include/rust/ed25519/: types.h
src/rust/include/tracing/: map.h
src/rust/src/: blake2b.rs  ed25519.rs  rustzcash.rs  tracing_ffi.rs
src/rust/src/tests/: key_agreement.rs  key_components.rs  mmr.rs  mod.rs  notes.rs  signatures.rs
src/script/.deps/: libbitcoin_common_a-interpreter.Po  libbitcoin_common_a-script.Po  libbitcoin_common_a-sign.Po  libbitcoin_common_a-standard.Po  libbitcoin_server_a-ismine.Po  libbitcoin_server_a-sigcache.Po
src/support/.deps/: libbitcoin_util_a-pagelocker.Po
src/test/data/: alertTests.raw.h  base58_keys_valid.json.h  merkle_commitments_sapling.json.h  merkle_path.json.h  merkle_path_sapling.json.h  merkle_roots_sapling.json.h  merkle_serialization_sapling.json.h  merkle_witness_serialization_sapling.json.h  sapling_key_components.json.h  tx_invalid.json.h
src/wallet/: asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_saplingmigration.cpp  asyncrpcoperation_saplingmigration.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  crypter.cpp  crypter.h  db.cpp  db.h  paymentdisclosure.cpp  paymentdisclosure.h  paymentdisclosuredb.cpp  paymentdisclosuredb.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/gtest/: test_paymentdisclosure.cpp  test_wallet.cpp  test_wallet_zkeys.cpp
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zcash/: Address.cpp  Address.hpp  History.cpp  History.hpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.hpp  Zcash.h  prf.cpp  prf.h  util.cpp  util.h
src/zcash/address/: sapling.cpp  sapling.hpp  sprout.cpp  sprout.hpp  zip32.cpp  zip32.h
test/: CMakeLists.txt  json_test_vectors.h  main.cpp  test_checktransaction.cpp  test_joinsplit.cpp  test_pedersen_hash.cpp  test_random.cpp  test_transaction.cpp  test_txid.cpp  utils.cpp
test/.deps/: zcash_gtest-json_test_vectors.Po  zcash_gtest-main.Po  zcash_gtest-test_checkblock.Po  zcash_gtest-test_checktransaction.Po  zcash_gtest-test_consensus.Po  zcash_gtest-test_deprecation.Po  zcash_gtest-test_dynamicusage.Po  zcash_gtest-test_equihash.Po  zcash_gtest-test_foundersreward.Po  zcash_gtest-test_history.Po  zcash_gtest-test_httprpc.Po  zcash_gtest-test_joinsplit.Po  zcash_gtest-test_keys.Po  zcash_gtest-test_keystore.Po  zcash_gtest-test_libzcash_utils.Po  zcash_gtest-test_mempool.Po  zcash_gtest-test_mempoollimit.Po  zcash_gtest-test_merkletree.Po  zcash_gtest-test_metrics.Po  zcash_gtest-test_miner.Po  zcash_gtest-test_noteencryption.Po  zcash_gtest-test_pedersen_hash.Po  zcash_gtest-test_pow.Po  zcash_gtest-test_random.Po  zcash_gtest-test_rpc.Po  zcash_gtest-test_sapling_note.Po  zcash_gtest-test_tautology.Po  zcash_gtest-test_timedata.Po  zcash_gtest-test_transaction.Po  zcash_gtest-test_transaction_builder.Po  zcash_gtest-test_txid.Po  zcash_gtest-test_upgrades.Po  zcash_gtest-test_validation.Po  zcash_gtest-test_zip32.Po  zcash_gtest-utils.Po
