cmake_minimum_required(VERSION 3.10)
set(VCPKG_ROOT "/home/yanghouhao/essay/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE PATH "")
set(CMAKE_TOOLCHAIN_FILE ${VCPKG_ROOT})
aux_source_directory(. DIR_SRCS)
project(tjfoc-sprout)
add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(model)
add_subdirectory(server)